# QC_EEG_PJCT

./: README.md  pyproject.toml  requirements-full.txt
docs/: final_report.md  prototype_description.md
docs/superpowers/plans/: 2026-05-29-qc-eeg-minimal-prototype.md
qc_eeg/: __init__.py  cli.py  metrics.py  reporting.py
reports/demo_run/: qc_results.csv  report.html  test_results.csv
tests/: test_metrics.py
