[project]
name = "qc-eeg-prototype"
version = "0.1.0"
description = "Minimal Quality Check prototype for EEG records."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
full = [
  "mne>=1.7",
  "mne-faster",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "jinja2>=3.1",
]

[project.scripts]
qc-eeg = "qc_eeg.cli:main"
